# utah_organoids_element-array-ephys

./: CHANGELOG.md  pyproject.toml  setup.py
element_array_ephys/: ephys_no_curation.py  ephys_organoids.py  version.py
element_array_ephys/readers/: kilosort_triggering.py
element_array_ephys/spike_sorting/: ecephys_spike_sorting.py  si_preprocessing.py  si_spike_sorting.py
